--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/974af2164da2a5c7d11954a188b2656c.jpg');
+        background-image: url('https://www.img.in.th/images/5df43533393dbda2b962582dad0d65c4.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,13 +29,13 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/b89a980553783a89bb197561001de9ee.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://www.img.in.th/images/500abf737f34a5c07bd112d2f5c0c941.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/b89a980553783a89bb197561001de9ee.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://www.img.in.th/images/500abf737f34a5c07bd112d2f5c0c941.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
           <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 20px;font-weight: 500;">เงื่อนไขเครดิตฟรี กดแชร์ส่งไปยังกลุ่มไลน์ 5 กลุ่ม หรือ ส่งให้เพื่อนในไลน์ 10 คน อย่าลืมแคปรูปภาพหลักฐานการแชร์นะคะ </p>
           <div class="d-grid gap-2 col-10 mx-auto">
-            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">ร่วมกิจกรรม</button>
+            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">กดแชร์กิจกรรม</button>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://www.img.in.th/images/b89a980553783a89bb197561001de9ee.jpg",
+        "url": "https://www.img.in.th/images/500abf737f34a5c07bd112d2f5c0c941.jpg",
         "size": "full",
         "aspectRatio": "20:20",
         "aspectMode": "cover"
@@ -70,19 +70,19 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#D58A14FF",
-        "borderColor": "#D58A14FF",
+        "backgroundColor": "#030816FF",
+        "borderColor": "#030816FF",
         "contents": [
           {
             "type": "box",
             "layout": "vertical",
             "spacing": "sm",
-            "backgroundColor": "#D58A14FF",
-            "borderColor": "#D58A14FF",
+            "backgroundColor": "#030816FF",
+            "borderColor": "#030816FF",
             "contents": [
               {
                 "type": "text",
-                "text": "แจกฟรี 100",
+                "text": "เคยได้รับกันหรือยัง",
                 "weight": "bold",
                 "size": "xl",
                 "color": "#FAFAF6FF",
@@ -91,14 +91,14 @@
               },
               {
                 "type": "text",
-                "text": "คุณเคยได้รับเครดิตฟรีหรือยัง?",
+                "text": "เพียงร่วมกิจกรรมก็รับได้เลย",
                 "color": "#FAFAF6FF",
                 "align": "center",
                 "contents": []
               },
               {
                 "type": "text",
-                "text": "ร่วมกิจกรรมกับเราสิได้แน่นอน",
+                "text": "แจกจริง ไม่ต้องเสียเงินสักบาท",
                 "color": "#FAFAF6FF",
                 "align": "center",
                 "contents": []
@@ -106,12 +106,13 @@
               {
                 "type": "box",
                 "layout": "horizontal",
-                "spacing": "sm",
+                "spacing": "xs",
                 "contents": [
                   {
                     "type": "text",
-                    "text": "แจกทุนฟรีจำนวน 100 เครดิต",
-                    "color": "#FAFAF6FF",
+                    "text": "รับเครดิตฟรีกดปุ่มด้านล่างนะคะ",
+                    "size": "xs",
+                    "color": "#FC1707FF",
                     "align": "center",
                     "contents": []
                   }
@@ -125,18 +126,18 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#D58A14FF",
-        "borderColor": "#D58A14FF",
+        "backgroundColor": "#030816FF",
+        "borderColor": "#030816FF",
         "contents": [
           {
             "type": "button",
             "action": {
               "type": "uri",
-              "label": "💰 รับเครดิตฟรี  💰",
-              "uri": "https://lin.ee/lFjoaXJ"
+              "label": "ติดต่อรับเครดิตฟรี",
+              "uri": "https://lin.ee/TSzweFC"
             },
-            "color": "#F3F710FF",
-            "style": "secondary"
+            "color": "#A205F1FF",
+            "style": "primary"
           }
         ]
       }
@@ -145,7 +146,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://www.img.in.th/images/974af2164da2a5c7d11954a188b2656c.jpg",
+        "url": "https://www.img.in.th/images/89b6b03d15cd7c179361514f3255289d.jpg",
         "size": "full",
         "aspectRatio": "20:20",
         "aspectMode": "cover"
@@ -154,8 +155,8 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#D58A14FF",
-        "borderColor": "#D58A14FF",
+        "backgroundColor": "#030816FF",
+        "borderColor": "#030816FF",
         "contents": [
           {
             "type": "box",
@@ -164,7 +165,7 @@
             "contents": [
               {
                 "type": "text",
-                "text": "AMA 888",
+                "text": "ULTRABET77",
                 "weight": "bold",
                 "size": "xl",
                 "color": "#FAFAF6FF",
@@ -209,8 +210,8 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#D58A14FF",
-        "borderColor": "#D58A14FF",
+        "backgroundColor": "#030816FF",
+        "borderColor": "#030816FF",
         "contents": [
           {
             "type": "button",
@@ -219,8 +220,8 @@
               "label": "สมัครสมาชิก",
               "uri": "https://www.autoallslot.net/"
             },
-            "color": "#F3F710FF",
-            "style": "secondary"
+            "color": "#A205F1FF",
+            "style": "primary"
           }
         ]
       }
@@ -250,7 +251,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1657380562-02OmjEQm"
+        liffId: "1657459996-4w6dEjDa"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
