--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/5df43533393dbda2b962582dad0d65c4.jpg');
+        background-image: url('https://sv1.picz.in.th/images/2022/10/21/v49GXg.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,9 +29,9 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/500abf737f34a5c07bd112d2f5c0c941.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://sv1.picz.in.th/images/2022/10/21/v49pkS.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/500abf737f34a5c07bd112d2f5c0c941.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://sv1.picz.in.th/images/2022/10/21/v49pkS.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
           <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 20px;font-weight: 500;">เงื่อนไขเครดิตฟรี กดแชร์ส่งไปยังกลุ่มไลน์ 5 กลุ่ม หรือ ส่งให้เพื่อนในไลน์ 10 คน อย่าลืมแคปรูปภาพหลักฐานการแชร์นะคะ </p>
           <div class="d-grid gap-2 col-10 mx-auto">
@@ -61,7 +61,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://www.img.in.th/images/500abf737f34a5c07bd112d2f5c0c941.jpg",
+        "url": "https://sv1.picz.in.th/images/2022/10/21/v49pkS.jpg",
         "size": "full",
         "aspectRatio": "20:20",
         "aspectMode": "cover"
@@ -146,7 +146,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://www.img.in.th/images/89b6b03d15cd7c179361514f3255289d.jpg",
+        "url": "https://sv1.picz.in.th/images/2022/10/21/v49GXg.jpg",
         "size": "full",
         "aspectRatio": "20:20",
         "aspectMode": "cover"
